SWP-1123: display primitive article statistics

--- a/client/directives/groupArticle/view.html
+++ b/client/directives/groupArticle/view.html
@@ -12,7 +12,7 @@
         infinite-scroll="loadArticles()"
         infinite-scroll-disabled="!initialFilters || !loadedFilters"
         infinite-scroll-parent="true">
-        <li class="list-item-view"
+        <li class="list-item-view sp-list-item-view"
             ng-repeat="i in articlesList"
             ng-include="'list-item.html'">
         </li>
