--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -9,16 +9,27 @@
 
 <ul ng-if="!loading && articles.length" class="flatList">
     <li ng-repeat="article in articles">
-        <div class="listElement listElement--noLeftBorder">
-            <div class="listElement__icon">
-                <i ng-if="!article.featureMedia && !article.content.featureMedia" class="icon-text"></i>
-                <i  ng-if="article.featureMedia || article.content.featureMedia" class="icon-photo"></i>
+
+        <div class="sd-list-item sd-shadow--z1" ng-class="{&quot;sd-list-item--activated&quot;:itemActive2}">
+            <div class="sd-list-item__border"></div>
+            <div class="sd-list-item__column" ng-if="article.duplicate" sd-tooltip="duplicate">
+                <i class="icon-warning-sign icon--red"></i>
             </div>
-            <div class="listElement__content">
-                {{ :: article.content.title}}
+            <div class="sd-list-item__column sd-list-item__column--grow sd-list-item__column--no-border">
+                <div class="sd-list-item__row">
+                    <span class="sd-overflow-ellipsis">{{ :: article.title || article.content.title}}</span>
+
+                </div>
+                <div class="sd-list-item__row">
+                    <time class="noPadding">{{article.updatedAt || article.createdAt || article.content.updatedAt || article.content.createdAt | reldate}}</time>
+                    <span class="sd-overflow-ellipsis sd-list-item--element-grow"></span>
+                    <span class="label label--success label--hollow">{{article.route.name || article.content.route.name}}</span>
+                    <span ng-if="article.sticky" class="pull-right state-label state-fetched" translate>pinned</span>
+                </div>
+            </div>
+            <div class="sd-list-item__action-menu">
                 <button class="pull-right" ng-if="article.sticky" ng-click="pinArticle(article)" title="{{:: 'Unpin' | translate }}"><i class="icon-pin"></i></button>
                 <button class="hidden pull-right" ng-if="!article.sticky" ng-click="pinArticle(article)" title="{{:: 'Pin' | translate }}"><i class="icon-pin"></i></button>
-                <span ng-if="article.sticky" class="pull-right state-label state-fetched" translate>pinned</span>
             </div>
         </div>
     </li>
