fix: super small minor css class change

--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -26,7 +26,7 @@
                     <span class="label"
                         ng-class="{'label--success label--hollow': (article.status === 'published' || article.content.status === 'published'), 'label--alert': (article.status === 'unpublished' || article.content.status === 'unpublished'), 'label--yellow2': (article.status === 'new' || article.content.status === 'new') }"
                         >{{article.route.name || article.content.route.name}}</span>
-                    <span ng-if="article.sticky" class="pull-right state-label state-fetched" translate>pinned</span>
+                    <span ng-if="article.sticky" class="pull-right label label--primary label--hollow" translate>pinned</span>
                 </div>
             </div>
             <div class="sd-list-item__action-menu">
