--- a/client/directives/themeManager/themeManager-details.html
+++ b/client/directives/themeManager/themeManager-details.html
@@ -10,7 +10,7 @@
             <div class="grid__item grid__item--col-4">
                 <img class="wizardThemeBox__image" ng-if="!theme.screenshots[0] || !theme.screenshots[0].url" src="./no-theme-preview.png" />
                 <img class="wizardThemeBox__image" ng-if="theme.screenshots[0] && theme.screenshots[0].url" ng-src="{{theme.screenshots[0].url}}" />
-                <span ng-model="theme.processGeneratedData" sd-switch="" ng-show="theme.generatedData" class="topMargin bottomSpace"></span><label>Install with sample content</label>
+                <span ng-model="theme.processGeneratedData" sd-switch="" ng-show="theme.generatedData" class="topMargin bottomSpace"></span><label>Include sample content</label>
                 <a class="btn btn--primary btn--large btn--expanded bottomMargin--10" ng-click="installTheme(theme)">Install</a>
                 <span>
                     <a class="btn btn--hollow btn--large btn--expanded" ng-if="theme.preview_url" ng-href="{{theme.preview_url}}" target="_blank">Preview</a>
