new ui: dashboard loaders

--- a/client/directives/listContentLists/view.html
+++ b/client/directives/listContentLists/view.html
@@ -1,3 +1,4 @@
+<div class="sd-loader" ng-if="loading"></div>
 <ul class="sd-card__content-list">
     <li class="sd-card__content-list-item sd-card__content-list-item--no-padding"
         ng-repeat="list in contentLists"
