--- a/client/directives/listArticles/list-articles-card.html
+++ b/client/directives/listArticles/list-articles-card.html
@@ -1,9 +1,8 @@
-<div ng-if="loading" class="card-box__placeholder card-box__content--scrollable">
-    <div class="item-group__loading"></div>
-</div>
-<div ng-if="!loading && !articles.length" class="card-box__placeholder card-box__content--scrollable">
+<div class="sd-loader" ng-if="loading"></div>
+
+<div ng-if="!loading && !articles.length" class="sd-card__content-list-item sd-card__content-list-item--small">
     <span translate>No articles in this list</span>
 </div>
-<li ng-if="articles.length" ng-repeat="article in articles" class="card-box__content-list-item--small card-box__content-list-item--border-bottom">
-    <h4 class="card-box__h4--normal-case">{{ :: article.content.title}}</h4>
+<li ng-if="articles.length" ng-repeat="article in articles" class="sd-card__content-list-item sd-card__content-list-item--small">
+    {{ :: article.content.title}}
 </li>
