fix: Add border between articles in content lists

--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -6,7 +6,7 @@
 </div>
 
 
-<div class="sd-list-item sd-shadow--z1"
+<div class="sd-list-item"
     ng-if="!loading && articles.length" ng-repeat="article in articles">
     <div class="sd-list-item__border"></div>
     <div class="sd-list-item__column" ng-if="article.duplicate" sd-tooltip="duplicate">
