--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -8,9 +8,13 @@
 
 <div class="sd-list-item"
     ng-if="!loading && articles.length" ng-repeat="article in articles">
-    <div class="sd-list-item__border"></div>
     <div class="sd-list-item__column" ng-if="article.duplicate" sd-tooltip="duplicate">
         <i class="icon-warning-sign icon--red"></i>
+    </div>
+    <div ng-if="!article.duplicate && article.content.featureMedia && article.content.featureMedia.image"
+        class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
+        <img src="{{article.content.tenant.subdomain ? 'http://' + article.content.tenant.subdomain + '.' + article.content.tenant.domainName + article.content.featureMedia._links.download.href : 'http://' + article.content.tenant.domainName + article.content.featureMedia._links.download.href}}"
+            class="sd-list-item__thumbnail" style="max-width:60px">
     </div>
     <div class="sd-list-item__column sd-list-item__column--grow sd-list-item__column--no-border">
         <div class="sd-list-item__row">
