--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -13,7 +13,7 @@
     </div>
     <div ng-if="!article.duplicate && article.content.featureMedia && article.content.featureMedia.image"
         class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
-        <img src="{{article.content.tenant.subdomain ? 'http://' + article.content.tenant.subdomain + '.' + article.content.tenant.domainName + article.content.featureMedia._links.download.href : 'http://' + article.content.tenant.domainName + article.content.featureMedia._links.download.href}}"
+        <img ng-src="{{article.content.tenant.subdomain ? 'http://' + article.content.tenant.subdomain + '.' + article.content.tenant.domainName + article.content.featureMedia._links.download.href : 'http://' + article.content.tenant.domainName + article.content.featureMedia._links.download.href}}"
             class="sd-list-item__thumbnail" style="max-width:60px">
     </div>
     <div class="sd-list-item__column sd-list-item__column--grow sd-list-item__column--no-border">
