--- a/client/directives/groupArticle/view.html
+++ b/client/directives/groupArticle/view.html
@@ -40,7 +40,7 @@
         </div>
         <div class="sd-list-item__action-menu sd-list-item__action-menu--direction-row">
             <button class="icn-btn" ng-if="rootType === 'incoming'" ng-click="webPublisherOutput.removeArticle(i); $event.stopPropagation();"><i class="icon-trash"></i></button>
-            <button class="icn-btn" ng-click="webPublisherOutput.editArticle(i); $event.stopPropagation();"><i class="icon-pencil"></i></button>
+            <button class="icn-btn" ng-click="webPublisherOutput.correctArticle(i); $event.stopPropagation();"><i class="icon-pencil"></i></button>
             <button class="icn-btn" ng-click="webPublisherOutput.openPublish(i, 'publish'); $event.stopPropagation();"><i class="icon-expand-thin"></i></button>
         </div>
     </div>
